Refactored AdminController with service for better handling response